--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -25,7 +25,7 @@
   &__container{
     position: absolute;
     line-height: 1.2;
-    bottom: 30vh;
+    bottom: 28vh;
     left: 5vw;
     max-width: 80vw;
     @media only screen and (min-width: 900px) {
